# MiltechDemo

./: .env.example  .gitignore  DEMO.md  Dockerfile  DokerFile  MakeFile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  llm.md  mcp.md
src/miltech_demo/agents/: _deps.py  analyst.py  reporter.py  router.py  validator.py
src/miltech_demo/api/: main.py
src/miltech_demo/core/: config.py  logging.py
src/miltech_demo/data/reports/: air-defense.md  border-activity.md  eastern-corridor.md  supply-lines.md
src/miltech_demo/graph/: __init__.py  state.py  workflow.py
src/miltech_demo/mcp_server/: __init__.py  server.py
src/miltech_demo/schemas/: __init__.py  a2a.py  base.py  chat.py  documents.py  enums.py  evidence.py  llm.py  mcp.py  report.py
src/miltech_demo/services/: __init__.py  documents.py  intel_db.py  llm.py  mcp_gateway.py  ollama_provider.py  protocol.py  tool_gateway.py
src/miltechdemo/: __init__.py
tests/: test_health.py
tests/agents/: test_no_direct_tool_access.py
tests/api/: test_chat.py  test_llm.py
tests/graph/: test_workflow.py
tests/mcp_server/: test_tools.py
tests/schemas/: test_a2a.py  test_documents.py  test_evidence.py  test_report.py
tests/services/: test_documents.py  test_intel_db.py  test_llm.py  test_protocol.py  test_tool_gateway.py
