[project]
name = "miltechdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oleksi Tkachenko", email = "oleksi.tkachenko@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
miltechdemo = "miltechdemo:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
