[project]
name = "miltech-demo"
version = "0.1.0"
description = "Local-first multi-agent intelligence platform prototype (FastAPI + LangGraph + MCP + A2A-style)."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Oleksi Tkachenko", email = "oleksi.tkachenko@gmail.com" }
]
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-ollama",
    "langgraph>=1.2.5",
    "mcp>=1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "miltech_demo"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
